[gd_scene load_steps=3 format=3 uid="uid://bu54vm2r4lxnx"]

[ext_resource type="Script" path="res://scenes/ui/card_pop_up.gd" id="1_wlhl8"]
[ext_resource type="PackedScene" uid="uid://bfaewwidoje7h" path="res://scenes/ui/card_menu_ui.tscn" id="2_2uwta"]

[node name="CardPopUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlhl8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.564706)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PopUpCard" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CardMenuUI" parent="Panel/MarginContainer/VBoxContainer/PopUpCard" instance=ExtResource("2_2uwta")]
layout_mode = 2

[node name="CardTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Card title"
horizontal_alignment = 1

[node name="CardDescription" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet. Fluctuat nec mergitur."
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
